; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/phy/extr_aquantia_main.c_aqr107_get_downshift.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/phy/extr_aquantia_main.c_aqr107_get_downshift.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.phy_device = type { i32 }

@MDIO_MMD_AN = common dso_local global i32 0, align 4
@MDIO_AN_VEND_PROV = common dso_local global i32 0, align 4
@MDIO_AN_VEND_PROV_DOWNSHIFT_EN = common dso_local global i32 0, align 4
@MDIO_AN_VEND_PROV_DOWNSHIFT_MASK = common dso_local global i32 0, align 4
@DOWNSHIFT_DEV_DISABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.phy_device*, i32*)* @aqr107_get_downshift to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @aqr107_get_downshift(%struct.phy_device* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.phy_device*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.phy_device* %0, %struct.phy_device** %4, align 8
  store i32* %1, i32** %5, align 8
  %9 = load %struct.phy_device*, %struct.phy_device** %4, align 8
  %10 = load i32, i32* @MDIO_MMD_AN, align 4
  %11 = load i32, i32* @MDIO_AN_VEND_PROV, align 4
  %12 = call i32 @phy_read_mmd(%struct.phy_device* %9, i32 %10, i32 %11)
  store i32 %12, i32* %6, align 4
  %13 = load i32, i32* %6, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %2
  %16 = load i32, i32* %6, align 4
  store i32 %16, i32* %3, align 4
  br label %36

17:                                               ; preds = %2
  %18 = load i32, i32* @MDIO_AN_VEND_PROV_DOWNSHIFT_EN, align 4
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @FIELD_GET(i32 %18, i32 %19)
  store i32 %20, i32* %8, align 4
  %21 = load i32, i32* @MDIO_AN_VEND_PROV_DOWNSHIFT_MASK, align 4
  %22 = load i32, i32* %6, align 4
  %23 = call i32 @FIELD_GET(i32 %21, i32 %22)
  store i32 %23, i32* %7, align 4
  %24 = load i32, i32* %8, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %31

26:                                               ; preds = %17
  %27 = load i32, i32* %7, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %31

29:                                               ; preds = %26
  %30 = load i32, i32* %7, align 4
  br label %33

31:                                               ; preds = %26, %17
  %32 = load i32, i32* @DOWNSHIFT_DEV_DISABLE, align 4
  br label %33

33:                                               ; preds = %31, %29
  %34 = phi i32 [ %30, %29 ], [ %32, %31 ]
  %35 = load i32*, i32** %5, align 8
  store i32 %34, i32* %35, align 4
  store i32 0, i32* %3, align 4
  br label %36

36:                                               ; preds = %33, %15
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i32 @phy_read_mmd(%struct.phy_device*, i32, i32) #1

declare dso_local i32 @FIELD_GET(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
